--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,7 @@
         "--runInBand",
         "--no-cache",
         "--config",
-        "jest.config.js",
+        "jest.config.jsson",
         "--runTestsByPath",
         "${relativeFile}"
       ],
