--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,8 @@ jobs:
       with:
         node-version: 14
         registry-url: https://registry.npmjs.org/
-    - run: yarn install
+    - run: npm ci
+    - run: npm run test
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
