--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,10 @@ jobs:
         registry-url: https://registry.npmjs.org/
     - run: npm ci
     - run: npm run test
+    - name: Commit report
+      run: |
+        git config --global user.name 'CI Bot'
+        git config --global user.email '1761608+gregbacchus@users.noreply.github.com'
     - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
