--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/ --ext .ts,.tsx",
-    "test": "./node_modules/.bin/jest --verbose --coverage --runInBand",
+    "test": "./node_modules/.bin/jest --verbose --runInBand",
+    "test-coverage": "./node_modules/.bin/jest --verbose --coverage --runInBand",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --outDir dist --sourceMap",
     "prepublishOnly": "npm run build && npm version patch",
     "postpublish": "git push"
@@ -37,34 +38,34 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@geeebe/jest-bdd": "^1.0.11",
-    "@types/faker": "^5.5.3",
+    "@geeebe/jest-bdd": "^1.0.14",
+    "@types/faker": "^5.5.6",
     "@types/jest": "^26.0.23",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/node": "^15.0.2",
+    "@types/koa-bodyparser": "^4.3.1",
+    "@types/node": "^15.12.4",
     "@types/supertest": "^2.0.11",
-    "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.25.0",
+    "@types/validator": "^13.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "faker": "^5.5.3",
-    "jest": "^26.6.3",
+    "jest": "^27.0.5",
     "koa-bodyparser": "^4.3.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.4",
     "validator": "^13.6.0"
   },
   "dependencies": {
     "@koa/router": "^10.0.0",
-    "@types/koa": "^2.13.1",
+    "@types/koa": "^2.13.3",
     "@types/koa__router": "^8.0.4",
     "koa": "^2.13.1",
-    "validata": "^3.0.4"
+    "validata": "^4.0.4"
   }
 }
