--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "koa"
   ],
   "main": "./dist/index.js",
-  "types": "./src/index.ts",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:gregbacchus/validata-koa.git"
@@ -66,6 +66,6 @@
     "@types/koa": "^2.13.1",
     "@types/koa__router": "^8.0.4",
     "koa": "^2.13.1",
-    "validata": "^4.0.9"
+    "validata": "^4.0.13"
   }
 }
