--- a/package.json
+++ b/package.json
@@ -21,22 +21,29 @@
     "request validator",
     "koa"
   ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git@github.com:gregbacchus/validata-koa.git"
   },
-  "scripts": {
-    "lint": "./node_modules/.bin/eslint src/ --ext .ts,.tsx",
-    "test": "./node_modules/.bin/jest --verbose --runInBand",
-    "test-coverage": "./node_modules/.bin/jest --verbose --coverage --runInBand",
-    "build": "rm -rf dist && ./node_modules/.bin/tsc --outDir dist --sourceMap",
-    "prepublishOnly": "npm run build && npm version patch",
-    "postpublish": "git push"
-  },
-  "author": "",
   "license": "MIT",
+  "author": "",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "scripts": {
+    "build": "rm -rf dist && ./node_modules/.bin/tsc --outDir dist --sourceMap",
+    "lint": "./node_modules/.bin/eslint src/ --ext .ts,.tsx",
+    "prepublishOnly": "npm run build && npm version patch",
+    "postpublish": "git push",
+    "test": "./node_modules/.bin/jest --verbose --runInBand",
+    "test-coverage": "./node_modules/.bin/jest --verbose --coverage --runInBand"
+  },
+  "dependencies": {
+    "@koa/router": "^10.0.0",
+    "@types/koa": "^2.13.4",
+    "@types/koa__router": "^8.0.4",
+    "koa": "^2.13.4",
+    "validata": "^4.0.17"
+  },
   "devDependencies": {
     "@geeebe/jest-bdd": "^1.0.14",
     "@types/faker": "^5.5.6",
@@ -60,12 +67,5 @@
     "tslint": "^6.1.3",
     "typescript": "^4.3.4",
     "validator": "^13.6.0"
-  },
-  "dependencies": {
-    "@koa/router": "^10.0.0",
-    "@types/koa": "^2.13.4",
-    "@types/koa__router": "^8.0.4",
-    "koa": "^2.13.4",
-    "validata": "^4.0.17"
   }
 }
